--- a/DoctorAndroid/app/src/main/res/layout/activity_3.xml
+++ b/DoctorAndroid/app/src/main/res/layout/activity_3.xml
@@ -1,52 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:orientation="vertical" >
+    tools:context=".Activity3">
 
-    <ImageView
-        android:id="@+id/phone_icon"
-        android:layout_width="42dp"
-        android:layout_height="49dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/threebars" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:orientation="vertical">
+
+<!--    <Button-->
+<!--        android:layout_width="400dp"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_marginTop="100dp"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:onClick="toMapsActivity"-->
+<!--        android:background="@android:color/white"-->
+<!--        android:textColor="@color/colorPrimary"-->
+<!--        android:text="View the map" />-->
+
+<!--    <Button-->
+<!--        android:layout_width="400dp"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:onClick="toActivity5"-->
+<!--        android:layout_marginTop="3dp"-->
+<!--        android:background="@android:color/white"-->
+<!--        android:textColor="@color/colorPrimary"-->
+<!--        android:text="Donor management" />-->
 
     <Button
         android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="200dp"
-        android:textAllCaps="false"
-        android:onClick="toMapsActivity"
-        android:text="View the map" />
-
-    <Button
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textAllCaps="false"
-        android:onClick="toActivity5"
-        android:text="Donor management" />
-
-    <Button
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center"
         android:textAllCaps="false"
         android:onClick="toActivity4"
+        android:layout_marginTop="200dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
         android:text="View blood Stocks" />
 
     <Button
+        android:id="@+id/btnShow"
         android:layout_width="400dp"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center"
         android:textAllCaps="false"
-        android:text="Stats" />
+        android:layout_marginTop="3dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:text="Settings" />
 
-</LinearLayout>
+    </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation"
+        app:itemBackground="@color/grey"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
+        app:menu="@menu/menu_navigation"
+        android:layout_alignParentBottom="true"/>
+
+
+</RelativeLayout>
