--- a/DoctorAndroid/app/src/main/res/layout/activity_main.xml
+++ b/DoctorAndroid/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FFFFFF"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
 
     <ImageView
@@ -13,7 +15,8 @@
         android:layout_width="278dp"
         android:layout_height="111dp"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/l8" />
 
     <Button
@@ -21,17 +24,22 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:onClick="toActivity2"
         android:text="Login"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
         android:textAllCaps="false" />
 
     <Button
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:textAllCaps="false"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
         android:text="Sign up" />
+
 
 </LinearLayout>
