--- a/DoctorAndroid/app/src/main/res/layout/activity_4.xml
+++ b/DoctorAndroid/app/src/main/res/layout/activity_4.xml
@@ -1,9 +1,19 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Activity4">
+
+
+<ScrollView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp"
-    android:fillViewport="false">
+    android:fillViewport="false"
+    android:scrollbars="none">
 
     <LinearLayout
     android:layout_width="match_parent"
@@ -18,6 +28,7 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:onClick="toActivity3"
+            android:background="#00000000"
             android:src="@drawable/backarrow" />
 
         <TextView
@@ -26,8 +37,9 @@
             android:layout_marginTop="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="80dp"
+            android:textColor="@color/colorPrimary"
             android:text="Blood Stocks"
-            android:textSize="25dp" />
+            android:textSize="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,17 +49,17 @@
 
             <ImageView
                 android:id="@+id/imageAp"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="80dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="30dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ap" />
 
             <ImageView
                 android:id="@+id/imageAn"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
                 android:scaleType="centerCrop"
@@ -87,17 +99,17 @@
 
             <ImageView
                 android:id="@+id/imageBp"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="80dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="30dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/bp" />
 
             <ImageView
                 android:id="@+id/imageBn"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
                 android:scaleType="centerCrop"
@@ -137,17 +149,17 @@
 
             <ImageView
                 android:id="@+id/imageABp"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="80dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="30dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/abp" />
 
             <ImageView
                 android:id="@+id/imageABn"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
                 android:scaleType="centerCrop"
@@ -187,17 +199,17 @@
 
             <ImageView
                 android:id="@+id/imageOp"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="80dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="30dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/op" />
 
             <ImageView
                 android:id="@+id/imageOn"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="30dp"
                 android:scaleType="centerCrop"
@@ -217,6 +229,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="80dp"
+                android:layout_marginBottom="100dp"
                 android:text="10 days"
                 android:textSize="17dp" />
 
@@ -224,6 +237,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
+                android:layout_marginBottom="100dp"
                 android:text="10 days"
                 android:textSize="17dp" />
 
@@ -232,3 +246,15 @@
     </LinearLayout>
 
 </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation"
+        app:itemBackground="@color/grey"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
+        app:menu="@menu/menu_navigation"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
