--- a/DoctorAndroid/app/src/main/res/layout/activity_5.xml
+++ b/DoctorAndroid/app/src/main/res/layout/activity_5.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Activity5">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -14,6 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:onClick="toActivity3"
+        android:background="#00000000"
         android:src="@drawable/backarrow" />
 
     <LinearLayout
@@ -37,10 +46,22 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="100dp"
+        android:background="#00000000"
         android:onClick="toActivity6"
         android:src="@drawable/handlense" />
 
     </LinearLayout>
 
-
 </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation"
+        app:itemBackground="@color/grey"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
+        app:menu="@menu/menu_navigation"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
