--- a/DoctorAndroid/app/src/main/res/layout/activity_9.xml
+++ b/DoctorAndroid/app/src/main/res/layout/activity_9.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
+    tools:context=".Activity9">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:orientation="vertical"
+        android:scrollbars="none">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:orientation="vertical" >
 
     <ImageButton
@@ -14,6 +30,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:onClick="toActivity6"
+        android:background="#00000000"
         android:src="@drawable/backarrow" />
 
     <TextView
@@ -199,13 +216,26 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="100dp"
         android:textAllCaps="false"
-        android:onClick="toActivity3"
+        android:onClick="toActivity6"
         android:textSize="17dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
         android:text="Generate report" />
 
 
-
-
-
 </LinearLayout>
+    </ScrollView>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation"
+        app:itemBackground="@color/grey"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
+        app:menu="@menu/menu_navigation"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
