--- a/DoctorWeb/Styles.css
+++ b/DoctorWeb/Styles.css
@@ -3,25 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar {
-  overflow: hidden;
-  background-color: #cc0000;
-}
 
-.navbar a {
-  float: right;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-
-.dropdown {
-  float: right;
-  overflow: hidden;
-}
 
 .dropdown .dropbtn {
   font-size: 16px;  
@@ -39,30 +21,260 @@ body {
   color: black;
 }
 
+.menu{
+  background-color: #cc0000;
+  margin-top: 2px;
+  margin-left:10px;
+  padding: 5px;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 5px;
+}
+
+
+.menu:hover{
+  background-color: #ddd;
+  border-radius: 6px;
+  color: #000;
+  padding: 7px;
+}
+
+.navbar{
+background-color: #cc0000;
+overflow: hidden;
+}
+
+.navbar a {
+float: right;
+color: #fff;
+text-align: center;
+text-decoration: none;
+font-size: 17px;
+padding: 25px;
+}
+
+.navbar a:hover {
+background-color: #ddd;
+color: #000;
+border-radius: 6px;
+}
+
+.dropdown {
+float: right;
+overflow: hidden;
+}
+
+.dropdown .dropbtn {
+font-size: 17px;
+border: none;
+outline: none;
+color: white;
+text-align: center;
+background-color: inherit;
+font-family: inherit;
+padding: 25px;
+}
+
+.dropdown:hover .dropbtn {
+background-color: #ddd;
+color: #000;
+border-radius: 6px;
+}
+
+
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
 }
 
 .dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
+float: none;
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+text-align: left;
 }
 
+
 .dropdown-content a:hover {
-  background-color: #ddd;
+background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+display: block;
+}
+
+.pic-row {
+  position: relative;
+  top: 10%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.pic-column {
+  flex: 33%;
+  max-width: 33%;
+  text-align: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  font-size: 25px;
+}
+
+@media (max-width: 700px) {
+.pic-column {
+    flex: 100%;
+    max-width: 100%;
+}
+
+.navbar a {
+  width: 100%;
+  padding: 5px;
+}
+
+.dropdown .dropbtn {
+  width: 100%;
+  padding: 5px;
+}
+.dropdown {
+  width: 100%;
+}
+
+.dropdown-content {
+  width: 100%;
+}
+
+.dropdown-content a {
+  text-align: center;
+}
+}
+
+.nav ul {
+  float: left;
+  background-color: green;
+  padding: 0px;
+}
+
+.nav li {
+    float: left;
+    position: relative;
+    width: 150px;
+    list-style: none;
+}
+
+.nav a {
+    display: block;
+    text-decoration: none;
+    padding: 5px 15px;
+    color: #000;
+}
+
+.nav ul ul {
+position: absolute;
+left: 0;
+top: 100%;
+visibility: hidden;
+opacity: 0;
+}
+
+.nav ul ul ul {
+left: 100%;
+top: 0;
+}
+
+.nav li:hover, .nav li:hover li {
+background: #ddd;
+}
+
+.nav li li:hover, .nav li li:hover li {
+background: #bbb;
+}
+
+.nav li li li:hover {
+background: #999;
+}
+
+.nav li:hover > ul {
+visibility: visible;
+opacity: 1;
+}
+
+html {
+min-height: 100%;
+box-sizing: border-box;
+}
+
+.container {
+position: relative;
+min-height: 100vh;
+}
+
+.header {
+padding-bottom: 5rem;
+}
+
+.footer {
+color: white;
+background-color: rgba(0,0,0,0.7);
+margin-top: 90px;
+width: 100%;
+padding: 50px;
+position: relative;
+bottom: 0;
+box-sizing: border-box;
+}
+
+.footer .footer-left {
+width:35%;
+}
+
+.footer .footer-center {
+width: 35%;
+}
+
+.footer .footer-right {
+width: 20%;
+}
+
+.footer .footer-left, .footer .footer-center, .footer .footer-right{
+display: inline-block;
+vertical-align:top;
+}
+
+
+.footer .footer-center p {
+display: inline-block;
+text-align: left;
+vertical-align: middle;
+margin-left: 5px;
+}
+
+.footer .footer-center  p span {
+display: block;
+}
+
+.footer .footer-right span {
+display: block;
+margin-bottom: 20px;
+}
+
+.footer .footer-right .footer-icons {
+margin-top: 20px;
+}
+
+.footer .footer-right .footer-icons a {
+display: inline-block;
+width: 35px;
+height: 35px;
+background-color: rgba(0,0,0,0.5);
+border-radius: 3px;
+text-align: center;
+font-size: 20px;
+line-height: 35px;
 }
 
 .btn {
@@ -70,9 +282,9 @@ body {
 	color: #000000;
 	border-color: #ffffff;
 	border-radius: 5px;
-  	text-decoration: none;
-  	display: inline-block;
-  	padding: 8px 16px;
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
 }
 
 .btn:hover {
@@ -84,22 +296,3 @@ body {
 	color: #555;
   	text-decoration: none;
 }
-
-
-
-
-/*.navbar a.active {
-  background-color: #4CAF50;
-  color: white;
-}*/
-
-/*.previous {
-  	background-color: #f1f1f1;
-  	color: black;
-}
-
-.next {
-  	background-color: #4CAF50;
-  	color: white;
-}
-*/
